--- a/01-gallery.html
+++ b/01-gallery.html
@@ -7,12 +7,17 @@
     <title>Image gallery</title>
     <link rel="stylesheet" href="css/common.css" />
     <link rel="stylesheet" href="css/styles.css" />
+
+    <link href="/css/basicLightbox.min.scss" rel="stylesheet">  
+    <script src="/js/basicLightbox.min.js"></script> 
+
   </head>
   <body>
     <p><a href="index.html">Go back</a></p>
 
     <!-- Add gallery items to this list -->
     <div class="gallery"></div>
+
 
     <script src="js/01-gallery.js" type="module"></script>
   </body>
