--- a/01-gallery.html
+++ b/01-gallery.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="css/common.css" />
     <link rel="stylesheet" href="css/styles.css" />
 
-    <link href="/css/basicLightbox.min.scss" rel="stylesheet">  
-    <script src="/js/basicLightbox.min.js"></script> 
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.css">
+<script src="https://cdn.jsdelivr.net/npm/basiclightbox@5.0.4/dist/basicLightbox.min.js"></script>
 
   </head>
   <body>
